add rasterize endpoint
